Fixed Image overflow

--- a/src/containers/CaseStudy/slices/Image/Image.scss
+++ b/src/containers/CaseStudy/slices/Image/Image.scss
@@ -1,4 +1,7 @@
 .caseStudy__image {
+  max-width: 100%;
+  overflow: hidden;
+
   img {
     width: 100%;
   }
